[Finish]注文履歴関係/admin

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,15 +4,16 @@ ja:
       pay:
         card: クレジットカード
         bank: 銀行振込
-      status:
-        wait: 入金待ち
-        check: 入金確認
-        making: 製作中
-        ready: 発送準備中
-        sent: 発送済み
-    order_item:
+
       order_status:
-        cannot: 着手不可
-        wait: 製作待ち
-        making: 製作中
-        maked: 製作完了
+        waiting: 入金待ち
+        pay_confirm: 入金確認
+        in_production: 製作中
+        in_preparation: 発送準備中
+        shipped: 発送済み
+    order_item:
+      production_status:
+        cannot_start: 着手不可
+        waiting_production: 製作待ち
+        in_production: 製作中
+        complete: 製作完了
